<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

            <TextView
                    android:id="@+id/text_view_player1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_1"
                    android:textSize="20sp"/>

            <TextView
                    android:id="@+id/score_player1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

            <TextView
                    android:id="@+id/text_view_player2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_2"
                    android:textSize="20sp"/>

            <TextView
                    android:id="@+id/score_player2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:id="@+id/text_view_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/game_status" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/buttonPosition_00"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_weight="1"
                android:textSize="60sp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

        <Button
                android:id="@+id/buttonPosition_01"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_weight="1"
                android:textSize="60sp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

        <Button
                android:id="@+id/buttonPosition_02"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_weight="1"
                android:textSize="60sp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/buttonPosition_10"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_weight="1"
                android:textSize="60sp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

        <Button
                android:id="@+id/buttonPosition_11"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_weight="1"
                android:textSize="60sp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

        <Button
                android:id="@+id/buttonPosition_12"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_weight="1"
                android:textSize="60sp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/buttonPosition_20"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_weight="1"
                android:textSize="60sp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

        <Button
                android:id="@+id/buttonPosition_21"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_weight="1"
                android:textSize="60sp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

        <Button
                android:id="@+id/buttonPosition_22"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_weight="1"
                android:textSize="60sp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/newGame_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/new_game"
                android:textSize="18sp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"/>
    </LinearLayout>

</LinearLayout>